# wechat-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  git.sh
examples/: config.rs  main.rs  req.rs  utils.rs
mp/: Cargo.toml  README.md
mp/src/: authorize.rs  enums.rs  lib.rs
mp/src/message/: event.rs  kf.rs  mod.rs  parser.rs  template.rs  text.rs  unknown.rs
mp/src/message/reply/: articles.rs  image.rs  mod.rs  text.rs  voice.rs
msg/: Cargo.toml
msg/src/: event.rs  kf.rs  lib.rs  parser.rs  text.rs  unknown.rs
msg/src/reply/: articles.rs  image.rs  mod.rs  text.rs  voice.rs
official/src/: lib.rs
open/: Cargo.toml  README.md  flow.drawio
open/src/: comp.rs  config.rs  domain.rs  lib.rs  open.rs  test.rs  ticket.rs  token.rs  wxa.rs
open/src/mp/: mod.rs  qr.rs  relation.rs
open/src/weapp/: auth.rs  basic.rs  category.rs  code.rs  domain.rs  express.rs  live.rs  mod.rs  official.rs  order.rs  privacy.rs  register.rs  template.rs  tester.rs
partner/: Cargo.toml  REMADME.md
partner/src/: apply.rs  lib.rs
pay/: Cargo.toml  README.md
pay/src/: lib.rs  order.rs
redis/: Cargo.toml
redis/src/: config.rs  lib.rs  session.rs
sdk/: Cargo.toml
sdk/src/: actix_client.rs  aes_crypt.rs  client.rs  config.rs  constant.rs  errors.rs  lib.rs  macros.rs  reqw_client.rs  session.rs  token.rs  url_encoding.rs  wxcrypto.rs  xmlutil.rs
src/: access_token.rs  client.rs  config.rs  errors.rs  lib.rs  macros.rs  message.rs  types.rs  wechat_crypto.rs  xmlutil.rs
src/message/: README.md  event.rs  kf.rs  message.rs  mod.rs  text.rs  unknown.rs
src/message/reply/: articles.rs  image.rs  text.rs  voice.rs
src/minapp/: REAMD.md
src/official/: REAMD.md  authorize.rs
src/pay/: REAMD.md
src/tripartite/: README.md  comp.rs  component.rs  config.rs  mod.rs  ticket.rs
src/weapp/: mod.rs  weapp.rs
store/: Cargo.toml  README.md
tripartite/: Cargo.toml  README.md
utils/: Cargo.toml
utils/src/: client.rs  crypto.rs  lib.rs  wxcrypto.rs  xmlutil.rs
weapp/: Cargo.toml  README.md
weapp/src/: auth.rs  category.rs  code.rs  config.rs  domain.rs  lib.rs  message.rs  min_category.rs  min_code.rs  min_domain.rs  min_tester.rs  near.rs  ocr.rs  plugin.rs  qrcode.rs  sub_template.rs  subscribe.rs  weapp.rs
web/: Cargo.toml  README.md  build.sh  install.sh
web/actix/: Cargo.toml
web/actix/conf/: ext.json  ext2.json  privacy.json
web/actix/examples/: test_comp.rs  test_sub.rs
web/actix/src/: access_token.rs  cache.rs  cluster.rs  main.rs  official.rs  result_response.rs  wx_handler.rs  wx_msg.rs
web/axum/: Cargo.toml
web/examples/: test_comp.rs
web/src/: access_token.rs  cache.rs  cluster.rs  config.rs  main.rs  official.rs  result_response.rs  utils.rs  wx_handler.rs  wx_msg.rs
work/: Cargo.toml  README.md
