[package]
name = "wechat"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wechat_mp = {path="mp", version = "0.1.0", optional = true}
wechat_msg = {path="msg", version = "0.1.0", optional = true}
wechat_open = {path="open", version = "0.1.0", optional=true}
wechat_pay = {path="pay", version = "0.1.0", optional=true}
wechat_store = {path="store", version = "0.1.0", optional=true}
wechat_weapp = {path="weapp", version = "0.1.0", optional = true}

[features]
default = ["wechat_weapp"]
mp = ["wechat_mp"]
msg = ["wechat_msg"]
open = ["wechat_open"]
pay = ["wechat_pay"]
store = ["wechat_store"]
full = ["wechat_weapp"]

[workspace]
members = [
  "web",
  "weapp", # 小程序
  "work", # 企业微信
  "open", # 开放平台
  "msg",  # 消息
  "mp",   # 公众号
  "sdk" # 工具类
]
