[package]
name = "wechat"
version = "0.2.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wechat_sdk = {path = "sdk", version = "0.2.0"}
# 公众号对接
wechat_mp = {path="mp", version = "0.2.0", optional = true}
# 开放平台
wechat_open = {path="open", version = "0.2.0", optional=true}
# 微信支付
wechat_pay = {path="pay", version = "0.2.0", optional=true}
# 微信小店
wechat_store = {path="store", version = "0.2.0", optional=true}
# 微信小程序
wechat_weapp = {path="weapp", version = "0.2.0", optional = true}
# 企业微信服务端对接
wechat_work = {path="work", version = "0.2.0", optional = true}
yaml-rust = "0.4.5"


[dev-dependencies]
serde_json = "1.0.79"
actix-rt = "2.7.0"
actix-web = "4.0.1"

[features]
default = ["wechat_weapp","wechat_pay"]
mp = ["wechat_mp"]
open = ["wechat_open"]
pay = ["wechat_pay"]
store = ["wechat_store"]
weapp = ["wechat_weapp"]
work = ["wechat_work"]
full = ["wechat_mp", "wechat_open", "wechat_pay", "wechat_store", "wechat_weapp", "wechat_work"]


[workspace]
members = [
  "web", # web应用
  "weapp", # 小程序
  "work", # 企业微信
  "open", # 开放平台
  "mp",   # 公众号
  "store",
  "sdk", # 工具类
  "redis"
]


