[package]
authors = ["shaipe <shaipe@sina.com>"]
edition = "2021"
name = "wechat"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"

wechat_sdk = {path = "sdk", version = "0.2.0"}
# 公众号对接
wechat_mp = {path = "mp", version = "0.2.0"}
# 开放平台
wechat_open = {path = "open", version = "0.2.0", optional = true}
# 微信支付
wechat_pay = {path = "pay", version = "0.2.0", optional = true}
# 微信小店
wechat_store = {path = "store", version = "0.2.0", optional = true}
# 微信小程序
wechat_weapp = {path = "weapp", version = "0.2.0", optional = true}
# 企业微信服务端对接
wechat_work = {path = "work", version = "0.2.0", optional = true}

[dev-dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
serde_json = "1.0.82"

[features]
default = []
full = ["wechat_pay", "wechat_store", "wechat_work"]
open = ["wechat_open"]
pay = ["wechat_pay"]
store = ["wechat_store"]
weapp = ["wechat_weapp"]
work = ["wechat_work"]

[workspace]
members = [
  "web/actix", # 基于actix-web应用  # "web/axum",  # 基于Axum框架的demo
  "weapp", # 小程序
  "work", # 企业微信
  "open", # 开放平台
  "mp", # 公众号
  "store",  # 微信小店
  "sdk", # 工具类
  "redis",  # redis
  "partner" # 微信服务商
]
