[package]
name = "wechat_mp"
version = "0.2.0"
authors = ["shaipe <shaipe@live.com>"]
keywords = ["wechat", "微信公众号"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
# 
wechat_sdk = {path = "../sdk", version = "0.2.0"}
redis= {path = "../redis", version = "0.2.0"}
