[package]
name = "wechat_open"
version = "0.2.0"
authors = ["shaipe <shaipe@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wechat_sdk = {path = "../sdk", version = "0.2.0"}
redis= {path = "../redis", version = "0.2.0"}
lazy_static = "1.4.0"
form_urlencoded= "1.0.1"
