[package]
authors = ["shaipe <shaipe@live.com>"]
edition = "2021"
name = "wechat_open"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
form_urlencoded = "1.0.1"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
wechat_redis = {path = "../redis", version = "0.2.0"}
wechat_sdk = {path = "../sdk", version = "0.2.0"}
yaml-rust = "0.4.5"

[dev-dependencies]
actix-rt = {version = "2.7.0"}
