[package]
authors = ["shaipe <shaipe@live.com>"]
edition = "2021"
name = "wechat_open"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
yaml-rust = "0.4.5"
base64 = "0.13.0"

wechat_redis = {path = "../redis", version = "0.2.0"}
wechat_sdk = {path = "../sdk", version = "0.2.0"}


[dev-dependencies]
actix-rt = "2.7.0"
