[package]
authors = ["shaipe <shaipe@live.com>"]
edition = "2018"
name = "wechat_pay"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
md5 = "0.7.0"
serde = "1.0.136"
serde-xml-rs = "0.5.1"
serde_json = "1.0.79"
wechat_sdk = {path = "../sdk", version = "0.1.0"}

[dev-dependencies]
actix-rt = {version = "2.7.0"}
