[package]
authors = ["shaipe <shaipe@live.com>"]
edition = "2021"
name = "wechat_pay"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wechat_sdk = {path = "../sdk", version = "0.2.0"}
serde = "1.0.136"
serde_json = "1.0.79"
serde-xml-rs = "0.5.1"
itertools= "0.10.3"
md5= "0.7.0"

[dev-dependencies]
actix-web = { version = "4.0.1", features = ["openssl"] }
