[package]
name = "redis"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.5"
wechat_sdk = {path = "../sdk", version = "0.2.0"}
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
