[package]
name = "wechat_sdk"
version = "0.1.0"
authors = ["shaipe <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

# 加解密
rust-crypto = "0.2.36"
rand = "0.8.4"
byteorder = "1.4.3"
base64 = "0.13.0"
lazy_static = "1.4.0"
chrono= "0.4.19"

# Xml解析
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"

# yml配置
yaml-rust = "0.4.5"

# reqwest
bytes = { version = "1.1.0", optional = true }
reqwest = { version = "0.11.8", features = ["blocking", "json"], optional = true }
tokio = { version = "1.15.0", features = ["full"], optional = true }
indicatif = { version = "0.16.2", optional = true }

# actix 请求
actix-rt = { version = "2.5.1", optional = true }
actix-web = { version = "3.3.3", features = ["openssl"], optional = true }
mime = { version = "0.3.16", optional = true }
encoding_rs = { version = "0.8.30", optional = true }
openssl = { version = "0.10.38", optional = true }
once_cell = "1.9.0"

[features]
default = ["actix"]
# 基于actix实现的Client
actix = ["openssl","encoding_rs","mime","actix-web","actix-rt"]
# 依赖 tokio, indicatif
req_async = ["bytes","tokio","reqwest","indicatif"]
