[package]
authors = ["shaipe <shaipe@live.com>"]
edition = "2021"
name = "wechat_sdk"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

# 加解密
rust-crypto = "0.2.36"
rand = "0.8.5"
byteorder = "1.4.3"
base64 = "0.13.0"
chrono = "0.4.19"
lazy_static = "1.4.0"

# Xml解析
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"

# yml配置
yaml-rust = "0.4.5"

# reqwest
bytes = { version = "1.1.0", optional = true }
reqwest = { version = "0.11.9", features = ["blocking", "json"], optional = true }
tokio = { version = "1.17.0", features = ["full"], optional = true }
indicatif = { version = "0.16.2", optional = true }

# actix 请求
awc = {version = "3.0.0-beta.19", features = ["openssl"], optional = true}
actix-rt = { version = "2.7.0", optional = true }
actix-web = { version = "4.0.1", features = ["openssl"], optional = true }
mime = { version = "0.3.16", optional = true }
encoding_rs = { version = "0.8.30", optional = true }
openssl = { version = "0.10.38", optional = true }
once_cell = "1.10.0"

[features]
default = ["actix"]
# 基于actix实现的Client
actix = ["openssl","encoding_rs","mime","actix-web","actix-rt","awc"]
# 依赖 tokio, indicatif
req_async = ["bytes", "tokio", "reqwest", "indicatif"]
