[package]
name = "wechat_weapp"
version = "0.1.0"
authors = ["shaipe <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
base64 = "0.13.0"
yaml-rust = "0.4.5"
wechat_sdk = {path = "../sdk", version = "0.1.0", features=["actix"]}


# [target.'cfg(feature="actix")'.dependencies]
# wechat_sdk = {path = "../sdk", version = "0.1.0", features=["actix"]}

# # 使用reqwest时引入
# [target.'cfg(feature="req_async")'.dependencies]
# wechat_sdk = {path = "../sdk", version = "0.1.0", features=["req_async"]}


[features]
default = ["actix"]
actix = []
req_async = []
