[package]
name = "web"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.5.0"
actix-web = "3.3.3"
actix-utils = "3.0.0"
lazy_static = "1.4.0"
futures = "0.3.19"
env_logger = "0.9.0"
bytes = "1.1.0"
md5= "0.7.0"
percent-encoding = "2.1.0"
serde = "1.0.132"
serde_json = "1.0.73"
serde_derive = "1.0.132"
base64 = "0.13.0"
wechat={path="../", version="0.1.0", features=["mp", "open"]}
wechat_sdk = {path = "../sdk", version = "0.1.0"}
json = "0.12.4"
url = "2.2.2"
http = "0.2.5"
form_urlencoded= "1.0.1"

[[bin]]
name = "wweb"
path = "src/main.rs"
