[package]
authors = ["shaipe <shaipe@sina.com>"]
edition = "2021"
name = "act_wechat"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-utils = "3.0.0"
actix-web = "4.0.1"
awc = { version = "3.0.0", features = ["openssl"], optional = true }
base64 = "0.13.0"
bytes = "1.1.0"
env_logger = "0.9.0"
form_urlencoded = "1.0.1"
futures = "0.3.21"
http = "0.2.7"
json = "0.12.4"
lazy_static = "1.4.0"
md5 = "0.7.0"
percent-encoding = "2.1.0"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
url = "2.2.2"

wechat = {path = "../../", version = "0.2.0", features = ["open"]}
wechat_redis = {path = "../../redis", version = "0.2.0"}
wechat_sdk = {path = "../../sdk", version = "0.2.0"}

# [[bin]]
# name = "wx"
# path = "src/main.rs"
# test = false
# bench = false
# required-features = ["frobnicate"]
